--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "48": "icon-48.png"
    },
    "manifest_version": 2,
-   "name": "Motivation",
+   "name": "Motivation (fork) by David Awad",
    "offline_enabled": true,
    "version": "0.6"
 }
